# KiCAD-MCP-Server

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  download_jlcpcb.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-macos.sh  setup-windows.ps1  test-router.js  test_jlcpcb_api.py  tsconfig.json
.github/: README.md
config/: linux-config.example.json  macos-config.example.json  windows-config.example.json
docs/: ARCHITECTURE.md  CLIENT_CONFIGURATION.md  DATASHEET_TOOLS_GUIDE.md  FOOTPRINT_SYMBOL_CREATOR_GUIDE.md  FREEROUTING_GUIDE.md  INDEX.md  IPC_BACKEND_STATUS.md  JLCPCB_API.md  JLCPCB_API_REFERENCE.md  JLCPCB_CART_API.md  JLCPCB_INTEGRATION.md  JLCPCB_USAGE_GUIDE.md  KNOWN_ISSUES.md  LIBRARY_INTEGRATION.md  LINUX_COMPATIBILITY_AUDIT.md  PCB_DESIGN_WORKFLOW.md  PLATFORM_GUIDE.md  REALTIME_WORKFLOW.md  ROADMAP.md  ROUTER_ARCHITECTURE.md  ROUTER_QUICK_START.md  ROUTING_TOOLS_REFERENCE.md  SCHEMATIC_TOOLS_REFERENCE.md  STATUS_SUMMARY.md  SVG_IMPORT_GUIDE.md  TOOL_INVENTORY.md  UI_AUTO_LAUNCH.md  VISUAL_FEEDBACK.md  WINDOWS_TROUBLESHOOTING.md  mcp-router-guide.md
python/: kicad_interface.py  requirements.txt  test_ipc_backend.py
scripts/: download_jlcpcb_db.py  download_jlcpcb_db_api.py  generate_tool_annotations.py  install-linux.sh
src/: config.ts  index.ts  kicad-server.ts  logger.ts  server.ts
tests/: __init__.py  test_add_label_empty_schematic.py  test_add_schematic_component.py  (+27 more)
(+107 files in other folders)
