[project]
name = "kicad-mcp-server"
version = "2.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true
mypy_path = "."
disable_error_code = [
    "import-untyped",
    "arg-type",
    "attr-defined",
    "union-attr",
    "call-arg",
    "assignment",
    "var-annotated",
    "annotation-unchecked",
    "index",
    "has-type",
    "dict-item",
    "misc",
    "list-item",
    "return-value",
    "operator",
]
