[project]
name = "kicad-mcp-server"
version = "2.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true
mypy_path = ".:python"
disable_error_code = [
    "arg-type",
    "attr-defined",
    "union-attr",
    "var-annotated",
    "index",
]

[[tool.mypy.overrides]]
module = [
    "pcbnew",
    "cairosvg",
    "sexpdata",
    "skip",
    "kipy",
    "kipy.*",
    "schematic",
    "PIL",
    "PIL.*",
]
ignore_missing_imports = true
